--- a/EquiposTecnicosSN.Web/Content/sb-admin-2.css
+++ b/EquiposTecnicosSN.Web/Content/sb-admin-2.css
@@ -352,3 +352,10 @@ table.dataTable thead .sorting:after {
 .panel-yellow a:hover {
     color: #df8a13;
 }
+/*
+
+*/
+.big
+{
+    font-size: 20px;
+}
