--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Delete.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajo
+﻿@model EquiposTecnicosSN.Entities.Mantenimiento.OrdenDeTrabajoMantenimientoCorrectivo
 
 @{
     ViewBag.Title = "Delete";
