--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/Equipo.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Detalles de @ViewBag.Title</div>
+            <div class="panel-heading"><i class="fa fa-medkit fa-fw"></i> Detalles de @ViewBag.Title</div>
             <div class="panel-body">
 
                 <div class="row">
