--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Equipo.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="panel panel-default">
-    <div class="panel-heading">@ViewBag.Title</div>
+    <div class="panel-heading"><i class="fa fa-medkit fa-fw"></i> @ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.EquipoId)
