--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionHardware.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Información del Equipo</div>
+            <div class="panel-heading"><i class="fa fa-gears fa-fw"></i> Información del Equipo</div>
 
             <div class="panel-body">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
