--- a/EquiposTecnicosSN.Web/Views/Shared/_ListGastos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListGastos.cshtml
@@ -4,7 +4,7 @@
     <div class="col-md-12">
         <!-- GASTOS -->
         <div class="panel panel-default">
-            <div class="panel-heading">Gastos</div>
+            <div class="panel-heading"><i class="fa fa-dollar fa-fw"></i> Gastos</div>
             <div class="panel-body">
 
                 <div class="row">
