--- a/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/EquiposClimatizacion/Index.cshtml
@@ -62,18 +62,29 @@
                                            title="Editar Equipo">
                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                         </a>
-
                                         <a class="btn btn-default btn-xs"
                                            href="@Url.Action("Details", new { id = item.EquipoId })"
                                            title="Ver Equipo">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>
+                                        <!--
+                                            
                                         <a class="btn btn-default btn-xs"
                                            href="@Url.Action("Delete", new { id = item.EquipoId })"
                                            title="Eliminar Equipo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                        </a> |
-                                        @Html.ActionLink("Nueva ODT", "CreateForEquipo", "OrdenesDeTrabajo", new { id = item.EquipoId }, null)
+                                        </a>
+                                        -->
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("CreateForEquipo", "ODTMantenimientoCorrectivo", new { id = item.EquipoId }, null)"
+                                           title="Iniciar Orden de Trabajo para Mantenimiento Correctivo">
+                                            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                                        </a>
+                                        <a class="btn btn-default btn-xs"
+                                           href="@Url.Action("CreateForEquipo", "ODTMantenimientoCorrectivo", new { id = item.EquipoId }, null)"
+                                           title="Iniciar Orden de Trabajo para Mantenimiento Preventivo">
+                                            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                                        </a>
                                     </td>
                                 </tr>
                             }
