--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Close.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Close.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model OrdenDeTrabajo
+@model OrdenDeTrabajoMantenimientoCorrectivo
 @{
-    ViewBag.Title = "Orden de Trabajo";
+    ViewBag.Title = "Orden de Trabajo Nº " + Model.NumeroReferencia + " para Mantenimiento Correctivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm())
@@ -11,7 +11,7 @@
         <div class="col-md-12">
 
             <div class="panel panel-default">
-                <div class="panel-heading">@ViewBag.Title</div>
+                <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> @ViewBag.Title</div>
                 <div class="panel-body">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.OrdenDeTrabajoId)
@@ -133,6 +133,16 @@
                         </div>
                         <div class="col-md-6">
 
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label" })
+                                @Html.TextAreaFor(model => model.Observaciones, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
+                            </div>
                         </div>
                     </div>
                 </div>
