--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model OrdenDeTrabajo
+@model OrdenDeTrabajoMantenimientoCorrectivo
 @{
-    ViewBag.Title = "Nueva Orden de Trabajo";
+    ViewBag.Title = "Orden de Trabajo Nº " + Model.NumeroReferencia + " para Mantenimiento Correctivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm())
@@ -11,14 +11,23 @@
         <div class="col-md-12">
 
             <div class="panel panel-default">
-                <div class="panel-heading">@ViewBag.Title</div>
+                <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> @ViewBag.Title</div>
                 <div class="panel-body">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.OrdenDeTrabajoId)
-                    @Html.HiddenFor(model => model.EquipoId)
                     @Html.HiddenFor(model => model.Estado)
                     @Html.HiddenFor(model => model.NumeroReferencia)
 
+                    <div class="row">
+                        <div class="col-md-2">
+                            @Html.LabelFor(model => model.Equipo, htmlAttributes: new { @class = "control-label" })
+                        </div>
+                        <div class="col-md-10">
+                            @Html.DropDownList("EquipoId", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.EquipoId, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <hr />
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -53,18 +62,9 @@
                                     @Html.DisplayFor(model => model.FechaInicio)
                                 </p>
                             </div>
-                            
                             <div class="form-group">
-                                <label>
-                                    &nbsp;
-                                    
-                                </label>
-                                <p class="form-control-static">
-                                    &nbsp;
-                                </p>
+
                             </div>
-
-
                             <div class="form-group">
                                 <label class="control-label switch-label">Prioridad</label>
                                 <div class="btn-group" data-toggle="buttons">
@@ -103,7 +103,17 @@
             <div class="form-group">
                 <a href="@Url.Action("Index")" class="btn btn-default" style="margin-bottom:5px;"> Volver</a>
                 <input type="submit" name="action" value="Guardar" class="btn btn-primary" style="margin-bottom:5px;" />
-                <!--<input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />-->
+                <input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />
+            </div>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label" })
+                @Html.TextAreaFor(model => model.Observaciones, htmlAttributes: new { @class = "form-control", rows = "5" })
+                @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
