--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Index.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoCorrectivo/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model IEnumerable<OrdenDeTrabajo>
+@model IEnumerable<OrdenDeTrabajoMantenimientoCorrectivo>
 
 @{
     ViewBag.Title = "Ordenes de tabajo";
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Listado de Ordenes de trabajo</div>
+            <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> Listado de Ordenes de trabajo</div>
             <div class="panel-body">
 
                 <div class="row">
@@ -75,18 +75,18 @@
                                     </td>
                                     <td>
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Edit", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Edit", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Editar Orden de trabajo">
                                             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                         </a>
 
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Details", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Details", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Ver Orden de trabajo">
                                             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                         </a>
                                         <a class="btn btn-default btn-xs"
-                                           href="@Url.Action("Delete", "OrdenesDeTrabajo", new { id = item.OrdenDeTrabajoId }, null)"
+                                           href="@Url.Action("Delete", "ODTMantenimientoCorrectivo", new { id = item.OrdenDeTrabajoId }, null)"
                                            title="Eliminar Orden de trabajo">
                                             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                                         </a>
