--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/CreateForEquipo.cshtml
@@ -1,7 +1,7 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model OrdenDeTrabajo
+@model OrdenDeTrabajoMantenimientoPreventivo
 @{
-    ViewBag.Title = "Nueva Orden de Trabajo";
+    ViewBag.Title = "Nueva Orden de Trabajo para Mantenimiento Preventivo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using (Html.BeginForm())
@@ -15,19 +15,10 @@
                 <div class="panel-body">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.OrdenDeTrabajoId)
+                    @Html.HiddenFor(model => model.EquipoId)
                     @Html.HiddenFor(model => model.Estado)
                     @Html.HiddenFor(model => model.NumeroReferencia)
 
-                    <div class="row">
-                        <div class="col-md-2">
-                            @Html.LabelFor(model => model.Equipo, htmlAttributes: new { @class = "control-label" })
-                        </div>
-                        <div class="col-md-10">
-                            @Html.DropDownList("EquipoId", null, htmlAttributes: new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.EquipoId, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <hr />
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -47,8 +38,9 @@
                                 </p>
                             </div>
                             <div class="form-group">
-                                <label class="control-label switch-label">¿El equipo se encuentra parado?</label>
-                                @Html.EditorFor(model => model.EquipoParado, new { @class = "form-control" })
+                                @Html.LabelFor(model => model.Checklist)
+                                @Html.DropDownList("ChecklistId", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Checklist, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
@@ -62,35 +54,48 @@
                                     @Html.DisplayFor(model => model.FechaInicio)
                                 </p>
                             </div>
-                            <div class="form-group">
 
+                            <div class="form-group">
+                                <label>
+                                    &nbsp;
+
+                                </label>
+                                <p class="form-control-static">
+                                    &nbsp;
+                                </p>
                             </div>
+
+
                             <div class="form-group">
                                 <label class="control-label switch-label">Prioridad</label>
-                                <div class="btn-group" data-toggle="buttons">
-                                    <label class="btn btn-success-outline active">
-                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Normal, new { @id = "Normal", @name = "Prioridad" })
-                                        @OrdenDeTrabajoPrioridad.Normal.ToString()
-                                    </label>
-                                    <label class="btn btn-warning-outline">
-                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Urgencia, new { @id = "Urgencia", @name = "Prioridad" })
-                                        @OrdenDeTrabajoPrioridad.Urgencia.ToString()
-                                    </label>
-                                    <label class="btn btn-danger-outline">
-                                        @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Emergencia, new { @id = "Emergencia", @name = "Prioridad" })
-                                        @OrdenDeTrabajoPrioridad.Emergencia.ToString()
-                                    </label>
+                                <div class="form-control-static"  style="padding-top: 0;">
+
+                                    <div class="btn-group" data-toggle="buttons">
+                                        <label class="btn btn-success-outline active">
+                                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Normal, new { @id = "Normal", @name = "Prioridad" })
+                                            @OrdenDeTrabajoPrioridad.Normal.ToString()
+                                        </label>
+                                        <label class="btn btn-warning-outline">
+                                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Urgencia, new { @id = "Urgencia", @name = "Prioridad" })
+                                            @OrdenDeTrabajoPrioridad.Urgencia.ToString()
+                                        </label>
+                                        <label class="btn btn-danger-outline">
+                                            @Html.RadioButtonFor(model => model.Prioridad, OrdenDeTrabajoPrioridad.Emergencia, new { @id = "Emergencia", @name = "Prioridad" })
+                                            @OrdenDeTrabajoPrioridad.Emergencia.ToString()
+                                        </label>
+                                    </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
-
+                    <hr />
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-group">
-                                @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
-                                @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control", rows = "5" })
-                                @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
+                                @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label" })
+                                @Html.TextAreaFor(model => model.Observaciones, htmlAttributes: new { @class = "form-control", rows = "5" })
+                                @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
@@ -103,7 +108,6 @@
             <div class="form-group">
                 <a href="@Url.Action("Index")" class="btn btn-default" style="margin-bottom:5px;"> Volver</a>
                 <input type="submit" name="action" value="Guardar" class="btn btn-primary" style="margin-bottom:5px;" />
-                <input type="submit" name="action" value="Guardar y diagnosticar" class="btn btn-info" style="margin-bottom:5px;" />
             </div>
         </div>
     </div>
