--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/InformacionComercial.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Información Comercial de @Model.Equipo.NombreCompleto</div>
+            <div class="panel-heading"><i class="fa fa-dollar fa-fw"></i> Información Comercial</div>
             <div class="panel-body">
 
                 <div class="row">
