--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
-            <div class="panel-heading">Información Comercial</div>
+            <div class="panel-heading"><i class="fa fa-dollar fa-fw"></i> Información Comercial</div>
 
             <div class="panel-body">
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
