--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/OrdenDeTrabajoMantenimientoCorrectivo.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/OrdenDeTrabajoMantenimientoCorrectivo.cshtml
@@ -1,8 +1,8 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
-@model OrdenDeTrabajo
+@model OrdenDeTrabajoMantenimientoCorrectivo
 
 <div class="panel panel-default">
-    <div class="panel-heading">@ViewBag.Title</div>
+    <div class="panel-heading"><i class="fa fa-wrench fa-fw"></i> @ViewBag.Title</div>
     <div class="panel-body">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.OrdenDeTrabajoId)
@@ -69,7 +69,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Descripcion, htmlAttributes: new { @class = "control-label" })
-                    @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control" })
+                    @Html.TextAreaFor(model => model.Descripcion, htmlAttributes: new { @class = "form-control", rows = "5" })
                     @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -79,7 +79,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Diagnostico, htmlAttributes: new { @class = "control-label" })
-                    @Html.TextAreaFor(model => model.Diagnostico, htmlAttributes: new { @class = "form-control" })
+                    @Html.TextAreaFor(model => model.Diagnostico, htmlAttributes: new { @class = "form-control", rows = "5" })
                     @Html.ValidationMessageFor(model => model.Diagnostico, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -89,8 +89,18 @@
             <div class="col-md-12">
                 <div class="form-group">
                     @Html.LabelFor(model => model.DetalleReparacion, htmlAttributes: new { @class = "control-label" })
-                    @Html.TextAreaFor(model => model.DetalleReparacion, htmlAttributes: new { @class = "form-control" })
+                    @Html.TextAreaFor(model => model.DetalleReparacion, htmlAttributes: new { @class = "form-control", rows = "5" })
                     @Html.ValidationMessageFor(model => model.DetalleReparacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Observaciones, htmlAttributes: new { @class = "control-label" })
+                    @Html.TextAreaFor(model => model.Observaciones, htmlAttributes: new { @class = "form-control", rows = "5" })
+                    @Html.ValidationMessageFor(model => model.Observaciones, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -98,33 +108,3 @@
 </div>
 
 @Html.Partial("_EditGastos", Model.Gastos)
-<!--
-
-<div class="panel panel-default">
-    <div class="panel-heading">Gastos</div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-12">
-                @*Html.ActionLink("Añadir Gasto", "AddGastoToOrden", null, new { @id = "addGasto", @class = "btn btn-default" })*@
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Concepto</th>
-                            <th>Monto</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablaGastos">
-                        @*foreach (var gasto in Model.Gastos)*@
-                        {
-                            <tr class="gastoRow">
-                                @*Html.Partial("_AddGastoToOrden", gasto)*@
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
--->
