--- a/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_Layout.cshtml
@@ -54,19 +54,17 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="@Url.Action("Index", "OrdenesDeTrabajo")"><i class="fa fa-wrench fa-fw"></i> Ordenes de Trabajo</a>
+                                <a href="#"><i class="fa fa-wrench fa-fw"></i> Ordenes de Trabajo</a>
                             </li>
                             <li>
                                 <a href=@Url.Action("Index", "Traslados")><i class="fa fa-truck fa-fw"></i> Traslados</a>
                             </li>
-                            @*    
                             <li>
                                 <a href=@Url.Action("Index", "StockRepuestos")><i class="fa fa-archive fa-fw"></i> Stock de Repuestos</a>
                             </li>
                             <li>
-                                <a href=@Url.Action("Index", "Repuestos")><i class="fa fa-gear fa-fw"></i> Repuestos</a>
+                                <a href=@Url.Action("Index", "Repuestos")><i class="fa fa-gears fa-fw"></i> Repuestos</a>
                             </li>
-                            *@
 
                             @if (User.IsInRole("admin"))
                             {
@@ -77,8 +75,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-gears fa-fw"></i> Administración<span class="fa arrow"></span></a>
+                                    <a href="#"><i class="fa fa-gear fa-fw"></i> Administración<span class="fa arrow"></span></a>
                                     <ul class="nav nav-second-level">
+                                        <li>@Html.ActionLink("Checklists MP", "Index", "ChecklistsMantenimientoPreventivo")</li>
                                         <li>@Html.ActionLink("Proveedores", "Index", "Proveedores")</li>
                                         <li>@Html.ActionLink("Ubicaciones", "Index", "Ubicaciones")</li>
                                         <li>@Html.ActionLink("Fabricantes", "Index", "Fabricantes")</li>
@@ -102,7 +101,7 @@
         <div class="container body-content">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">@ViewBag.Title</h1>
+                    <h3 class="page-header">@ViewBag.Title</h3>
                 </div>
             </div>
             @if (ViewBag.Message != null)
