--- a/EquiposTecnicosSN.Web/Views/Shared/_ListSolicitudes.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListSolicitudes.cshtml
@@ -4,7 +4,7 @@
     <div class="col-md-12">
         <!-- REPUESTOS-->
         <div class="panel panel-default">
-            <div class="panel-heading">Repuestos</div>
+            <div class="panel-heading"><i class="fa fa-gears fa-fw"></i> Repuestos</div>
             <div class="panel-body">
 
                 <div class="row">
@@ -31,9 +31,20 @@
                                                 <a class="btn btn-default btn-xs"
                                                    data-toggle="modal" data-target="#modalSolicitudRepuestoServicioEquipo"
                                                    data-solicitud-id="@sr.SolicitudRepuestoServicioId"
-                                                   title="Ver Equipo">
+                                                   title="Ver Detalles">
                                                     <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                                                 </a>
+                                                @if (sr.FechaCierre == null)
+                                                {
+                                                    <a class="btn btn-default btn-xs"
+                                                       data-action="close-solicitud"
+                                                       data-solicitud-id="@sr.SolicitudRepuestoServicioId"
+                                                       data-toggle="tooltip"
+                                                       title="Cerrar Orden">
+                                                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                                                    </a>
+                                                }
+
                                             </td>
                                         </tr>
                                     }
