--- a/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/DisplayTemplates/InformacionComercial.cshtml
@@ -33,7 +33,7 @@
                                 @Html.DisplayNameFor(model => model.PrecioCompra)
                             </label>
                             <p class="form-control-static">
-                                @Html.DisplayFor(model => model.PrecioCompra)
+                                &#36;&nbsp;@Html.DisplayFor(model => model.PrecioCompra)
                             </p>
                         </div>
 
@@ -53,7 +53,7 @@
                                 @Html.DisplayNameFor(model => model.ValorRestante)
                             </label>
                             <p class="form-control-static">
-                                @Html.DisplayFor(model => model.ValorRestante)
+                                &#36;&nbsp;@Html.DisplayFor(model => model.ValorRestante)
                             </p>
                         </div>
 
