--- a/EquiposTecnicosSN.Web/Views/Shared/_ListGastos.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_ListGastos.cshtml
@@ -12,8 +12,8 @@
                         <table class="table table-hover table-responsive table-condensed table-striped">
                             <thead>
                                 <tr>
-                                    <th>Concepto</th>
-                                    <th>Monto ($)</th>
+                                    <th style="width:70%;">Concepto</th>
+                                    <th style="width:30%;">Monto ($)</th>
                                 </tr>
                             </thead>
                             <tbody>
