--- a/EquiposTecnicosSN.Web/Views/Proveedores/Create.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Proveedores/Create.cshtml
@@ -1,33 +1,16 @@
 ﻿@model EquiposTecnicosSN.Entities.Mantenimiento.Proveedor
 
 @{
-    ViewBag.Title = "Proveedor";
+    ViewBag.Title = "Nuevo Proveedor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @using (Html.BeginForm())
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">Nuevo @ViewBag.Title</div>
-                <div class="panel-body">
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.AntiForgeryToken()
+    
+    @Html.EditorFor(model => model)
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            @Html.AntiForgeryToken()
-                            <div class="form-group">
-                                @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label" })
-                                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
