--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/InformacionComercial.cshtml
@@ -20,7 +20,7 @@
                             @Html.LabelFor(model => model.PrecioCompra, htmlAttributes: new { @class = "control-label" })
                             <div class="input-group">
                                 <span class="input-group-addon">$</span>
-                                @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.PrecioCompra, new { htmlAttributes = new { @class = "form-control", type = "number" } })
                             </div>
                             @Html.ValidationMessageFor(model => model.PrecioCompra, "", new { @class = "text-danger" })
                         </div>
@@ -40,7 +40,7 @@
                             @Html.LabelFor(model => model.ValorRestante, htmlAttributes: new { @class = "control-label" })
                             <div class="input-group">
                                 <span class="input-group-addon">$</span>
-                                @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.ValorRestante, new { htmlAttributes = new { @class = "form-control", type = "number" } })
                             </div>
                             @Html.ValidationMessageFor(model => model.ValorRestante, "", new { @class = "text-danger" })
                         </div>
