--- a/EquiposTecnicosSN.Web/Views/Shared/_AddGastoToOrden.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_AddGastoToOrden.cshtml
@@ -1,14 +1,21 @@
-﻿@using HtmlHelpers.BeginCollectionItem 
+﻿@using HtmlHelpers.BeginCollectionItem
 @model EquiposTecnicosSN.Entities.Mantenimiento.GastoOrdenDeTrabajo
 
 
 <tr class="gastoRow">
-@using (Html.BeginCollectionItem("gastos"))
-{
-    @Html.HiddenFor(model => model.OrdenDeTrabajoId)
-    @Html.HiddenFor(model => model.GastoOrdenDeTrabajoId)
-    <td>@Html.EditorFor(model => model.Concepto, new { htmlAttributes = new { @class = "form-control" } })</td>
-    <td>@Html.EditorFor(model => model.Monto, new { htmlAttributes = new { @class = "form-control" } })</td>
-    <td><a href="#" class="deleteGasto">Elminar</a></td>
-}
+    @using (Html.BeginCollectionItem("gastos"))
+    {
+        @Html.HiddenFor(model => model.OrdenDeTrabajoId)
+        @Html.HiddenFor(model => model.GastoOrdenDeTrabajoId)
+
+        <td style="width:70%;">
+    @Html.EditorFor(model => model.Concepto, new { htmlAttributes = new { @class = "form-control" } })</td>
+        <td>
+            <div class="input-group">
+                <span class="input-group-addon">$</span>
+                @Html.EditorFor(model => model.Monto, new { htmlAttributes = new { @class = "form-control", type = "number" } })
+            </div>
+        </td>
+        <td><a href="#" class="deleteGasto">Elminar</a></td>
+    }
 </tr>
