--- a/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Details.cshtml
+++ b/EquiposTecnicosSN.Web/Views/ODTMantenimientoPreventivo/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EquiposTecnicosSN.Entities.Mantenimiento
+@using EquiposTecnicosSN.Web.CustomExtensions
 @model OrdenDeTrabajoMantenimientoPreventivo
 
 @{
@@ -15,7 +16,7 @@
 <div class="row">
     <div class="col-md-12">
         <div class="form-group">
-            <a href="@Url.Action("Index")" class="btn btn-default"> Volver</a>
+            <a href="@Url.Action("Details", Model.Equipo.WebController() ,new { id = Model.Equipo.EquipoId })" class="btn btn-default"> Volver</a>
 
             @if (OrdenDeTrabajoEstado.Abierta.Equals(Model.Estado) || OrdenDeTrabajoEstado.EsperaRepuesto.Equals(Model.Estado))
             {
@@ -28,3 +29,20 @@
     </div>
 </div>
 @Html.Partial("_DetailSolicitudRepuestoServicioModal")
+
+@section Scripts {
+    <script type="text/javascript">
+
+        $(function () {
+
+            $("#@Html.IdFor(model  => model.ChecklistCompleto)").bootstrapSwitch({
+                onColor: "success",
+                onText: "Si",
+                offText: "No",
+                offColor: "danger",
+                disabled: "disabled"
+            });
+
+        });
+    </script>
+}
