--- a/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Repuesto.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/EditorTemplates/Repuesto.cshtml
@@ -30,7 +30,7 @@
                             @Html.LabelFor(model => model.Costo, htmlAttributes: new { @class = "control-label" })
                             <div class="input-group">
                                 <span class="input-group-addon">$</span>
-                                @Html.EditorFor(model => model.Costo, new { htmlAttributes = new { @class = "form-control",  type="number"} })
+                                @Html.EditorFor(model => model.Costo, new { htmlAttributes = new { @class = "form-control"} })
                             </div>
                             @Html.ValidationMessageFor(model => model.Costo, "", new { @class = "text-danger" })
                         </div>
