--- a/EquiposTecnicosSN.Web/Views/Shared/_AddGastoToOrden.cshtml
+++ b/EquiposTecnicosSN.Web/Views/Shared/_AddGastoToOrden.cshtml
@@ -13,7 +13,7 @@
         <td>
             <div class="input-group">
                 <span class="input-group-addon">$</span>
-                @Html.EditorFor(model => model.Monto, new { htmlAttributes = new { @class = "form-control", type = "number" } })
+                @Html.EditorFor(model => model.Monto, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </td>
         <td><a href="#" class="deleteGasto">Elminar</a></td>
