--- a/EquiposTecnicosSN.Web/Views/SolicitudesRepuestoServicio/OrderReplacementService.cshtml
+++ b/EquiposTecnicosSN.Web/Views/SolicitudesRepuestoServicio/OrderReplacementService.cshtml
@@ -1,4 +1,5 @@
-﻿@model EquiposTecnicosSN.Entities.Mantenimiento.SolicitudRepuestoServicio
+﻿@using EquiposTecnicosSN.Web.CustomExtensions
+@model EquiposTecnicosSN.Entities.Mantenimiento.SolicitudRepuestoServicio
 @{
     ViewBag.Title = "Solicitud de Repuesto o servicio";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -53,7 +54,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
-                <a href="@Url.Action("Details", new { id = Model.OrdenDeTrabajoId })" class="btn btn-default"> Volver</a>
+                <a href="@Url.Action("Details", Model.OrdenDeTrabajo.WebController(), new { id = Model.OrdenDeTrabajoId }, null)" class="btn btn-default"> Volver</a>
                 <input type="submit" value="Guardar" class="btn btn-primary"/>
                 @*if (Model.FechaCierre == null)
                 {
